; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exi.c_EXI_RegisterEXICallback.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_exi.c_EXI_RegisterEXICallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@eximap = common dso_local global %struct.TYPE_4__* null, align 8
@EXI_CHANNEL_2 = common dso_local global i64 0, align 8
@EXI_CHANNEL_0 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @EXI_RegisterEXICallback(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  store i64 %0, i64* %3, align 8
  store i32* %1, i32** %4, align 8
  store i32* null, i32** %6, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @eximap, align 8
  %9 = load i64, i64* %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i64 %9
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %7, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @_CPU_ISR_Disable(i32 %11)
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %6, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  store i32* %16, i32** %18, align 8
  %19 = load i64, i64* %3, align 8
  %20 = load i64, i64* @EXI_CHANNEL_2, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %28

22:                                               ; preds = %2
  %23 = load i64, i64* @EXI_CHANNEL_0, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** @eximap, align 8
  %25 = load i64, i64* @EXI_CHANNEL_0, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i64 %25
  %27 = call i32 @__exi_setinterrupts(i64 %23, %struct.TYPE_4__* %26)
  br label %32

28:                                               ; preds = %2
  %29 = load i64, i64* %3, align 8
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %31 = call i32 @__exi_setinterrupts(i64 %29, %struct.TYPE_4__* %30)
  br label %32

32:                                               ; preds = %28, %22
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @_CPU_ISR_Restore(i32 %33)
  %35 = load i32*, i32** %6, align 8
  ret i32* %35
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @__exi_setinterrupts(i64, %struct.TYPE_4__*) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
